Added main event page and admin list view of events with ability to delete

--- a/static/style.css
+++ b/static/style.css
@@ -2,6 +2,9 @@
     background-color: #526151;
   }
 
+#body {
+  background-color: #526151;
+}
 
   /* Keep the dropdown relative to its button */
   .dropdown-menu {
