--- a/templates/whatskava.html
+++ b/templates/whatskava.html
@@ -1,5 +1,57 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Whats Kava</h1>
+<section class="text-light p-md-5 pb-3 pt-5 text-center text-md-start">
+    <div class="container">
+      <!--Flex box untill its MD size-->
+      <div class="d-md-flex align-items-center justify-content-between">
+        <!--Item1-->
+        <div class="px-3">
+          <h1>Kava is a root from the Pacific Islands.</h1>
+          <p class="lead my-4 mb-0">Kava is a traditional drink from the Pacific Islands, valued for its calming effects. Made from kava roots, it promotes relaxation and reduces stress without dulling mental clarity. Enjoyed worldwide, kava offers a natural way to unwind and find tranquility!</p>
+        </div>
+        <!--Item2-->
+        <img src="https://upload.wikimedia.org/wikipedia/commons/9/9a/Starr_070515-7054_Piper_methysticum.jpg"
+         alt="" class=" m-3 rounded w-50 max-w-large d-none d-md-block">
+      </div>
+    </div>
+  </section>
+  
+  <!--Would you-->
+  <section class="text-dark bg-light p-5 text-center">
+    <div id="vote" class="container">
+      <div class="d-md-flex align-items-center justify-content-between">
+        <div class="mb-md-0 mb-4">
+         
+  
+        </div>
+      </div>
+    </div>
+  </section>
+  
+  <!--Section 3-->
+  <section class="p-0 p-md-5 text-light">
+    <div class="container">
+      <!--Grid ROW-->
+      <div class="row align-items-center justify-content-between">
+  
+        <!--Grid col1-->
+        <div class="col-md">
+          <img src="https://www.wineenthusiast.com/wp-content/uploads/2023/05/Kava-1280x853.jpg"
+          alt="" class=" p-4 p-md-0 rounded img-fluid w-100">
+        </div>
+        <!--Grid col2-->
+        <div class="col-md p-5 text-center text-md-start">
+          <h2 class="pb-2">What Kava does to you</h2>
+          <p class="lead">
+              Kava works by affecting neurotransmitters in the brain. Its active compounds, kavalactones, bind to GABA receptors, boosting GABA’s calming effects and reducing anxiety.
+          </p>
+          <p class="lead">
+              Additionally, kavalactones increase dopamine, lifting mood and creating a sense of well-being. Unlike alcohol, kava relaxes without impairing cognition, offering a calm, clear-minded experience.
+          </p>
+  
+        </div>
+  
+      </div>
+    </div>
 {% endblock %}
