--- a/templates/admindash.html
+++ b/templates/admindash.html
@@ -3,23 +3,34 @@
 {% block content %}
 <!-- PENDING EVENTS IN CONOLOCAL ORDER w/ option to approve  -->
 <!-- CURRENT EVENTS IN CONOLOCAL ORDER w/ option to delete or edit-->
-<div class="container mt-5 mb-5">
-    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
-      <!-- Event 1 -->
-       {% for event in events %}
-      <div class="col">
-        <div class="card ">
-          <div class="card-body">
-            <h5 class="card-title">{{ event['name'] }}</h5>
-            <p class="card-text">Hosted By: {{ event['host'] }}</p>
-            <p class="card-text"><strong>Date:</strong> {{ event['event_date'] }}</p>
-            <p class="card-text"><strong>Start Time:</strong> {{ event['start_time'] }}</p>
-            <p class="card-text"><strong>End Time:</strong> {{ event['end_time'] }}</p>
-          </div>
-        </div>
+<div class="container mt-4 mb-5">
+    
+
+       
+  <ul class="list-group list-group">
+    <h2 class="text-center mb-4 text-light"> Current Events </h2>
+    {% for event in events %}
+
+    <li class="list-group-item d-flex justify-content-between align-itmes-center">
+      <div class="ms-2 me-auto ">
+        <div class="fw-bold me-3">{{ event['name'] }} Hosted by: {{ event['host'] }}</div>
+        On {{ event['event_date'] }} At {{ event['start_time'] }}
       </div>
-      {% endfor %}
+      <span class="align-content-center ">
+      <form action="/delete-event" method="POST" style="display:inline;">
+      <input type="hidden" name="event_id" value="{{ event['id'] }}">
+      <button type="submit" class="btn btn-danger">DELETE</button>
+      </form></span>
+    </li>
+
+    {% endfor %}
+  </ul>
+
       
+      
+</div>
+      
+
       
 
 <!-- DROP DOWN FOR CREATING EVENT-->
@@ -28,7 +39,7 @@
         <!-- Drop Downs Menue Template-->
         <div class="dropdown w-100">
             <!-- Dropdown Button -->
-            <button class="btn btn-secondary btn-lg dropdown-toggle w-100" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+            <button class="btn btn-light btn-lg dropdown-toggle w-100" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
                 Create Event
             </button>
             <!-- Dropdown Menu containing the Form -->
