--- a/templates/base.html
+++ b/templates/base.html
@@ -7,13 +7,13 @@
 
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="static/style.css">
         
         <title>KAVA</title>
 
 
     </head>
-    <body class="bg-green">
+    <body class="bg-green" id="body">
 
 
         <nav class="navbar navbar-expand-sm bg-light navbar-light py-3">
