--- a/templates/events.html
+++ b/templates/events.html
@@ -1,5 +1,22 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Events</h1>
+<div class="container my-4 ">
+    <div class="row justify-content-center mx-2">
+        {% for event in events %}
+        <div class="card w-100 mb-4 justify-content-center " style="max-width: 70rem;">
+            <img src="" alt="" class="card-img-top">
+            <div class="card-body w-100">
+                <h5><span class="fw-bold">{{ event['name'] }} -</span> <span class="h6">Hosted By {{ event['host'] }}</span></h5>
+                <p class="card-text">{{ event['description'] }}</p>
+            </div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">{{ event['event_date'] }} at {{ event['start_time'] }}</li>
+            
+            </ul>
+        </div>
+        {% endfor %}
+    </div>
+</div>
 {% endblock %}
+
