--- a/templates/eventMenuAdmin.html
+++ b/templates/eventMenuAdmin.html
@@ -46,7 +46,7 @@
             </div>
    
             <!--  Submit -->
-            <div class="col-md-4">
+            <div class="col-md-4 align-content-end justify-content-end">
                 <button type="submit" class="btn btn-primary">Submit</button>
             </div>
         </div>    
