--- a/templates/whatskava.html
+++ b/templates/whatskava.html
@@ -3,7 +3,7 @@
 {% block content %}
 <section class="text-light p-md-5 pb-3 pt-5 text-center text-md-start">
   <div class="container">
-      <!--Flex box untill its MD size-->
+      <!--Flex box until its MD size-->
     <div class="d-md-flex align-items-center justify-content-between">
         <!--Item1-->
       <div class="px-3">
@@ -18,30 +18,29 @@
 </section>
   
 
+<!--Section 3-->
+<section class="p-0 p-md-5 text-light">
+  <div class="container">
+    <!--Grid ROW-->
+    <div class="row align-items-center justify-content-between">
   
-  <!--Section 3-->
-  <section class="p-0 p-md-5 text-light">
-    <div class="container">
-      <!--Grid ROW-->
-      <div class="row align-items-center justify-content-between">
-  
-        <!--Grid col1-->
-        <div class="col-md">
-          <img src="https://www.wineenthusiast.com/wp-content/uploads/2023/05/Kava-1280x853.jpg"
-          alt="" class=" p-4 p-md-0 rounded img-fluid w-100">
-        </div>
-        <!--Grid col2-->
-        <div class="col-md p-5 text-center text-md-start">
-          <h2 class="pb-2">What Kava does to you</h2>
-          <p class="lead">
-              Kava works by affecting neurotransmitters in the brain. Its active compounds, kavalactones, bind to GABA receptors, boosting GABA’s calming effects and reducing anxiety.
-          </p>
-          <p class="lead">
-              Additionally, kavalactones increase dopamine, lifting mood and creating a sense of well-being. Unlike alcohol, kava relaxes without impairing cognition, offering a calm, clear-minded experience.
-          </p>
-  
-        </div>
-  
+      <!--Grid col1-->
+      <div class="col-md">
+        <img src="/static/Kava-1280x853.jpg"
+        alt="" class=" p-4 p-md-0 rounded img-fluid w-100">
+      </div>
+      <!--Grid col2-->
+      <div class="col-md p-5 text-center text-md-start">
+        <h2 class="pb-2">What Kava does to you</h2>
+        <p class="lead">
+            Kava works by affecting neurotransmitters in the brain. Its active compounds, kavalactones, bind to GABA receptors, boosting GABA’s calming effects and reducing anxiety.
+        </p>
+        <p class="lead">
+            Additionally, kavalactones increase dopamine, lifting mood and creating a sense of well-being. Unlike alcohol, kava relaxes without impairing cognition, offering a calm, clear-minded experience.
+        </p>
       </div>
     </div>
+  </div>
+</section>
+
 {% endblock %}
