--- a/templates/addEvent.html
+++ b/templates/addEvent.html
@@ -1,6 +1,5 @@
 <!-- templates/eventmenu.html -->
-<div class="container mt-5 mb-5">
-    <form action="/admin-dash" method="POST" autocomplete="off">
+<div class="container m-auto">
         <!-- Name and Host -->
         <div class="row g-3">
             <div class="col-md-6">
@@ -21,12 +20,12 @@
         </div>
         <!-- Date Time  -->
         <div class="row g-3 mt-2">
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <label for="date" class="form-label">Date Of Event</label>
                 <input type="date" name="date" required  class="form-control" id="date" placeholder="mm/dd/yyyy">
             </div>
             <!--  Frequency -->
-            <div class="col-md-6">
+            <div class="col-md-5">
                 <label for="frequency" class="form-label">Frequency</label>
                 <select name="frequency" required name="frequency" id="frequency" class="form-select">
                     <option selected disabled>Select A Frequency</option>
@@ -37,19 +36,21 @@
                     <option value="other">Other</option>
                 </select>
             </div>
-        </div>
-    
-        <div class="row g-3 mt-2">   
             <div class="col-md-4">
                 <label for="startTime" class="form-label">Start Time Of Event</label>
                 <input type="time" required name="startTime" class="form-control" id="startTime" placeholder="">
             </div>
+        </div>
+        
+        <div class="row row g-3 mt-2">
+            <div class="mb-3 col-12">
+                <label for="imageUpload" class="form-label">Upload Image</label>
+                <input class="form-control" type="file" id="imageUpload" name="imageUpload" accept="image/*">
+            </div>
+        </div>
+        
    
             <!--  Submit -->
-            <div class="col-md-4 align-content-end justify-content-end">
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </div>
-        </div>    
-    </form>
+
 </div>
 
