--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
 
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link rel="stylesheet" href="static/style.css">
+        <link rel="stylesheet" href="../static/style.css">
         
         <title>The Kava Bar</title>
 
@@ -33,13 +33,42 @@
                     <!-- ms-auto pushes to right-->
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a href="/events" class="nav-link mx-1">Our Events</a>
+                            <a href="/" class="nav-link mx-1">Our Events</a>
                         </li>
+
                         <li class="nav-item">
-                            <a href="/whats-kava" class="nav-link mx-1">What is Kava</a>
+                             
+ 
+                                <div class="d-flex ">
+                                  <a class="nav-link mx-1 " type="button" data-bs-toggle="modal" data-bs-target="#addEventModal">
+                                    Submit An Event
+                                  </a>
+                                  <div class="modal fade" id="addEventModal" tabindex="-1" data-bs-backdrop="static" data-bs-keyboard="false" aria-labelledby="addEventModal" aria-hidden="true">
+                                    <div class="modal-dialog modal-xl">
+                                      <div class="modal-content">
+                                        <div class="modal-header">
+                                          <h5 class="modal-title" id="addNewEvent">Request New Event</h5>
+                                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                        </div>
+                                        
+                                          <form action="/submit-event" method="POST" autocomplete="off" class="text-bg-dark">
+                                            <div class="modal-body">
+                                            {% include '/addEvent.html' %}
+                                            </div>
+                                            <div class="modal-footer">
+                                              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                              <button type="submit" class="btn btn-primary">Submit</button>
+                                           </div>
+                                        </form>
+                                      </div>
+                                    </div>      
+                                  </div>
+                                </div>
+                              
                         </li>
+
                         <li class="nav-item">
-                            <a href="/contact" class="nav-link mx-1">Contact Us</a>
+                            <a href="/admin" class="nav-link mx-1">Owner Login</a>
                         </li>
                     </ul>
                 </div>
