--- a/templates/users/events.html
+++ b/templates/users/events.html
@@ -8,6 +8,11 @@
 
 <div class="container mb-4 pb-4 px-2 ">
     <div class="row justify-content-center mx-2">
+        {% if not pendingEvents %}
+        <div class="card w-100 mb-1 justify-content-center " style="max-width: 70rem; max-height: 25rem;">
+        <h5 class="text-center text-secondary m-3">No Events Found!</h5>
+        </div>
+        {% else %}
         {% for event in events %}
         <div class="card w-100 mb-4 justify-content-center " style="max-width: 70rem; max-height: 30rem;">
             <img src="" alt="" class="card-img-top">
@@ -21,7 +26,9 @@
             
             </ul>
         </div>
+        
         {% endfor %}
+        {% endif %}
     </div>
 </div>
 {% endblock %}
