--- a/templates/addEvent.html
+++ b/templates/addEvent.html
@@ -42,12 +42,12 @@
             </div>
         </div>
         
-        <div class="row row g-3 mt-2">
+        <!--  <div class="row row g-3 mt-2">
             <div class="mb-3 col-12">
                 <label for="imageUpload" class="form-label">Upload Image</label>
                 <input class="form-control" type="file" id="imageUpload" name="imageUpload" accept="image/*">
             </div>
-        </div>
+        </div> -->
         
    
             <!--  Submit -->
