--- a/templates/users/events.html
+++ b/templates/users/events.html
@@ -8,7 +8,7 @@
 
 <div class="container mb-4 pb-4 px-2 ">
     <div class="row justify-content-center mx-2">
-        {% if not pendingEvents %}
+        {% if not events %}
         <div class="card w-100 mb-1 justify-content-center " style="max-width: 70rem; max-height: 25rem;">
         <h5 class="text-center text-secondary m-3">No Events Found!</h5>
         </div>
