Added expanding event view . Event Host links. Shorten list view of events

--- a/templates/addEvent.html
+++ b/templates/addEvent.html
@@ -11,6 +11,10 @@
                 <input type="text" name="hostedBy" class="form-control" required id="hostedBy" placeholder="Enter host name">
             </div>
         </div>
+        <div class="col-md-12">
+            <label for="hostLink" class="form-label">Host Link</label>
+            <input type="text" name="hostLink" class="form-control" required id="hostLink" placeholder="Enter host link">
+        </div>
         <!-- Description -->
         <div class="row g-3 mt-2">
             <div class="col-md-12">
