--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
 
             <!-- Containes with padding on each side-->
             <div class="container">
-                <a href="/" class="navbar-brand"> The Kava Bar</a>
+                <a href="/" class="navbar-brand">[Company Name]</a>
 
                 <!-- Creats the ham menue that is linked to #navmenu-->
                 <button type="button" data-bs-toggle="collapse"
