--- a/templates/admin/editevent.html
+++ b/templates/admin/editevent.html
@@ -7,8 +7,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+    <div class="d-flex justify-content-end p-2">
+        <form action="/delete-event" method="POST">
+            <input type="hidden" name="event_id" value="{{ formatted_event['eventId'] }}">
+            <button type="submit" class="btn btn-danger">DELETE</button>
+        </form>
+    </div>
     <div class="container mt-3 mb-5">
-        <form method="POST" action="/update_event/{{ formatted_event['id'] }}">
+        <form method="POST" action="/update_event/{{ formatted_event['eventId'] }}">
             <div class="mb-3">
                 <label for="name" class="form-label">Event Name</label>
                 <input type="text" class="form-control" id="name" name="name" value="{{ formatted_event['name'] }}" required>
@@ -35,11 +41,7 @@
                 <input type="time" class="form-control" id="start_time" name="start_time" placeholder="formatted_event['start_time'] }}"
                        value="{{ formatted_event['start_time'] }}">
             </div>
-            <div class="mb-3">
-                <label for="frequency" class="form-label">Frequency</label>
-                <input type="text" class="form-control" id="frequency" name="frequency" 
-                       value="{{ formatted_event['frequency'] }}">
-            </div>
+ 
             <div class="mb-3">
                 <label for="status" class="form-label">Status</label>
                 <select class="form-select" id="status" name="status">
@@ -50,15 +52,14 @@
             <div class="d-flex justify-content-between mt-4">
                 <!-- Save BUTTON-->
                 <button type="submit" class="btn btn-primary">Save Changes</button>
+            
                 <!-- Cancel BUTTON-->
                 <a href="/admin-dash" class="btn btn-secondary">Cancel</a>
                 <!-- DELETE BUTTON-->
-                <form action="/delete-event" method="POST" style="display:inline;">
-                    <input type="hidden" name="event_id" value="{{ formatted_event['id'] }}">
-                    <button type="submit" class="btn btn-danger">DELETE</button>
-                </form>
+                
             </div>
         </form>
+
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
